@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.daos</groupId>
     <artifactId>daos-java-root</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>2.4.0-SNAPSHOT</version>
   </parent>
 
   <groupId>io.daos</groupId>
@@ -36,12 +36,12 @@
     <dependency>
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
-      <version>3.11.4</version>
+      <version>3.16.3</version>
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-buffer</artifactId>
-      <version>4.1.59.Final</version>
+      <version>4.1.77.Final</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
@@ -93,17 +93,6 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.8</version>
         <executions>
@@ -141,18 +130,14 @@
             <configuration>
               <tasks>
                 <mkdir dir="${native.build.path}"/>
-                <exec executable="sh" outputproperty="java-home" failonerror="true">
-                  <arg value="./find_java_home.sh"/>
-                </exec>
+                <exec executable="./find_java_home.sh" outputproperty="java-home" failonerror="true"/>
                 <echo message="Java home is ${java-home}" />
-                <exec executable="bash" outputproperty="sl-prefix" failonerror="true">
-                  <arg value="./find_build_paths.sh"/>
+                <exec executable="./find_build_paths.sh" outputproperty="sl-prefix" failonerror="true">
                   <arg value="${daos.install.path}"/>
                   <arg value="SL_PREFIX"/>
                 </exec>
                 <echo message="SL_PREFIX is ${sl-prefix}" />
-                <exec executable="bash" outputproperty="sl-protobufc-prefix" failonerror="true">
-                  <arg value="./find_build_paths.sh"/>
+                <exec executable="./find_build_paths.sh" outputproperty="sl-protobufc-prefix" failonerror="true">
                   <arg value="${daos.install.path}"/>
                   <arg value="SL_PROTOBUFC_PREFIX"/>
                 </exec>
@@ -174,6 +159,7 @@
                   <arg value="-c"/>
                   <arg value="-fPIC"/>
                   <arg value="--std=gnu99"/>
+                  <arg value="-Werror"/>
                 </exec>
                 <exec dir="${native.build.path}"
                       failonerror="true"
@@ -189,6 +175,7 @@
                   <arg value="-c"/>
                   <arg value="-fPIC"/>
                   <arg value="--std=gnu99"/>
+                  <arg value="-Werror"/>
                 </exec>
                 <exec dir="${native.build.path}"
                       failonerror="true"
@@ -205,6 +192,7 @@
                   <arg value="-c"/>
                   <arg value="-fPIC"/>
                   <arg value="--std=gnu99"/>
+                  <arg value="-Werror"/>
                 </exec>
                 <exec dir="${native.build.path}"
                       failonerror="true"
@@ -221,6 +209,7 @@
                   <arg value="-c"/>
                   <arg value="-fPIC"/>
                   <arg value="--std=gnu99"/>
+                  <arg value="-Werror"/>
                 </exec>
                 <exec dir="${native.build.path}"
                       failonerror="true"
@@ -306,7 +295,7 @@
                   <exclude>org.javassist:javassist</exclude>
                 </excludes>
               </artifactSet>
-              <finalName>${artifactId}-${version}-protobuf3-netty4-shaded</finalName>
+              <finalName>${project.artifactId}-${project.version}-protobuf3-netty4-shaded</finalName>
             </configuration>
           </execution>
         </executions>
@@ -325,7 +314,7 @@
             <configuration>
               <artifacts>
                 <artifact>
-                  <file>target/${artifactId}-${version}-protobuf3-netty4-shaded.jar</file>
+                  <file>target/${project.artifactId}-${project.version}-protobuf3-netty4-shaded.jar</file>
                   <type>jar</type>
                   <classifier>protobuf3-netty4-shaded</classifier>
                 </artifact>
@@ -403,6 +392,52 @@
 
   <profiles>
     <profile>
+      <id>java-11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration combine.self="override">
+              <compilerArgs>
+                <arg>-h</arg>
+                <arg>${project.basedir}/src/main/native/include</arg>
+                <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+              </compilerArgs>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <failOnError>false</failOnError>
+              <additionalJOptions>
+                <additionalJOption>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</additionalJOption>
+                <additionalJOption>--add-exports=java.xml/jdk.xml.internal=ALL-UNNAMED</additionalJOption>
+              </additionalJOptions>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-exports java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <argLine>--add-exports java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>shade-all</id>
       <build>
         <plugins>
@@ -449,7 +484,7 @@
                 <configuration>
                   <artifacts>
                     <artifact>
-                      <file>target/${artifactId}-${version}-shaded.jar</file>
+                      <file>target/${project.artifactId}-${project.version}-shaded.jar</file>
                       <type>jar</type>
                       <classifier>all-shaded</classifier>
                     </artifact>
